@@ -10,6 +10,8 @@
  * Improve MessagingService efficiency (CASSANDRA-3617)
  * Avoid ID conflicts from concurrent schema changes (CASSANDRA-3794)
  * Set thrift HSHA server thread limit to unlimet by default (CASSANDRA-4277)
+ * Avoids double serialization of CF id in RowMutation messages
+   (CASSANDRA-4293)
 
 
 1.1.1-dev
